--- a/iOS_Aura/Base.lproj/Schedules.storyboard
+++ b/iOS_Aura/Base.lproj/Schedules.storyboard
@@ -20,18 +20,18 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SzV-oN-eND" id="1ng-ga-WWc">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kRl-JV-BUg">
-                                            <rect key="frame" x="15" y="6" width="31.5" height="19.5"/>
+                                            <rect key="frame" x="15" y="5" width="32" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="12d-vk-rCh">
-                                            <rect key="frame" x="15" y="25.5" width="40.5" height="13.5"/>
+                                            <rect key="frame" x="15" y="25" width="41" height="14"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -73,13 +73,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="yCW-wi-wsb">
-                                                    <rect key="frame" x="8" y="11" width="164.5" height="21"/>
+                                                    <rect key="frame" x="8" y="11" width="165" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Zu-mC-Huo">
-                                                    <rect key="frame" x="180.5" y="7" width="411.5" height="30"/>
+                                                    <rect key="frame" x="181" y="7" width="411" height="30"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
@@ -102,13 +102,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="On" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="FPn-6m-0qH">
-                                                    <rect key="frame" x="8" y="6.5" width="22.5" height="21"/>
+                                                    <rect key="frame" x="8" y="5" width="23" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="VQs-Da-xnH">
-                                                    <rect key="frame" x="8" y="24" width="584" height="43.5"/>
+                                                    <rect key="frame" x="8" y="23" width="584" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="43.5" id="3lW-4L-3Nm"/>
                                                     </constraints>
@@ -117,7 +117,7 @@
                                                     </date>
                                                 </datePicker>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="DOp-b0-LDd">
-                                                    <rect key="frame" x="8" y="75" width="584" height="43.5"/>
+                                                    <rect key="frame" x="8" y="75" width="584" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="43.5" id="act-hy-BVv"/>
                                                     </constraints>
@@ -146,13 +146,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Off" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000596046448" translatesAutoresizingMaskIntoConstraints="NO" id="U7u-fE-D8Y">
-                                                    <rect key="frame" x="8" y="8" width="24.5" height="27"/>
+                                                    <rect key="frame" x="8" y="8" width="25" height="27"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="GSR-Du-aBG">
-                                                    <rect key="frame" x="8" y="82" width="583.5" height="43.5"/>
+                                                    <rect key="frame" x="8" y="82" width="584" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="43.5" id="6qt-eT-3C5"/>
                                                     </constraints>
@@ -161,7 +161,7 @@
                                                     </date>
                                                 </datePicker>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="ThR-fD-dK9">
-                                                    <rect key="frame" x="8" y="30" width="584.5" height="43.5"/>
+                                                    <rect key="frame" x="8" y="30" width="584" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="43.5" id="pe2-eG-lxO"/>
                                                     </constraints>
@@ -191,13 +191,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repeat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000596046448" translatesAutoresizingMaskIntoConstraints="NO" id="Zcq-Td-3Ak">
-                                                    <rect key="frame" x="8" y="12" width="164.5" height="21"/>
+                                                    <rect key="frame" x="8" y="12" width="165" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OiY-e6-61h">
-                                                    <rect key="frame" x="180.5" y="0.0" width="411.5" height="43.5"/>
+                                                    <rect key="frame" x="181" y="0.0" width="411" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="43.5" id="Zys-2D-aeF"/>
                                                     </constraints>
@@ -217,6 +217,58 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="opi-7k-QTb">
+                                        <rect key="frame" x="0.0" y="349" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="opi-7k-QTb" id="8SE-Zk-J7T">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wVs-AJ-8aO">
+                                                    <rect key="frame" x="543" y="6" width="51" height="31"/>
+                                                </switch>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UTC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000596046448" translatesAutoresizingMaskIntoConstraints="NO" id="K7E-pD-ceB">
+                                                    <rect key="frame" x="8" y="11" width="527" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wVs-AJ-8aO" firstAttribute="leading" secondItem="K7E-pD-ceB" secondAttribute="trailing" constant="8" id="9ax-Uo-BBD"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="K7E-pD-ceB" secondAttribute="leading" id="GCY-U6-Vpp"/>
+                                                <constraint firstItem="wVs-AJ-8aO" firstAttribute="centerY" secondItem="8SE-Zk-J7T" secondAttribute="centerY" id="Sfr-gL-t5E"/>
+                                                <constraint firstItem="K7E-pD-ceB" firstAttribute="centerY" secondItem="8SE-Zk-J7T" secondAttribute="centerY" id="hIT-eR-Ofs"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="wVs-AJ-8aO" secondAttribute="trailing" id="idC-as-6QS"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="FtV-jv-vx8">
+                                        <rect key="frame" x="0.0" y="393" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FtV-jv-vx8" id="XX2-pS-ZqK">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbT-xf-qaJ" customClass="AuraButton" customModule="Aura" customModuleProvider="target">
+                                                    <rect key="frame" x="200" y="7" width="200" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="200" id="C17-OA-li2"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Save">
+                                                        <color key="titleColor" red="0.42352944609999998" green="0.82352948189999997" blue="0.62745100259999997" alpha="1" colorSpace="deviceRGB"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="saveAction:" destination="UMc-Vq-NeK" eventType="touchUpInside" id="jkn-xg-1In"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tbT-xf-qaJ" firstAttribute="centerX" secondItem="XX2-pS-ZqK" secondAttribute="centerX" id="6d0-qa-xqo"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="tbT-xf-qaJ" secondAttribute="bottom" constant="-1" id="Tjf-gJ-fEQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -232,6 +284,8 @@
                         <outlet property="onDatePicker" destination="VQs-Da-xnH" id="NfW-Kx-bKK"/>
                         <outlet property="onTimeDatePicker" destination="DOp-b0-LDd" id="Pd5-mO-cQg"/>
                         <outlet property="repeatPicker" destination="OiY-e6-61h" id="TDz-vR-iSv"/>
+                        <outlet property="saveScheduleButton" destination="tbT-xf-qaJ" id="Rkw-e6-oqK"/>
+                        <outlet property="utcSwitch" destination="wVs-AJ-8aO" id="Zq0-Dw-FDn"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CBB-RZ-ckE" userLabel="First Responder" sceneMemberID="firstResponder"/>
